[project]
name = "gh_actions_test_plettich"
version = "0.0.1"
authors = [
  { name="Example Author", email="paul.lettich@netknights.it" },
]
description = "A small GitHub actions test package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/plettich/gh_test_repos"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
